--- a/docker-compose.pub.yml
+++ b/docker-compose.pub.yml
@@ -4,10 +4,7 @@ services:
 
   backend-kupoday:
     container_name: backend-kupoday
-    build: 
-      context: backend
-      dockerfile: Dockerfile
-    image: backend-kupoday:1.0.0
+    image: zorkiy82/backend-kupoday:1.0.0
     env_file:
       - .env
     ports:
@@ -20,10 +17,7 @@ services:
 
   frontend-kupoday:
     container_name: frontend-kupoday
-    build: 
-      context: frontend
-      dockerfile: Dockerfile
-    image: frontend-kupoday:1.0.0
+    image: zorkiy82/frontend-kupoday:1.0.0
     env_file:
       - .env
     ports:
