--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,18 @@
-FROM node:16.15-alpine
+FROM node:16-alpine AS builder
 WORKDIR /app
 COPY package*.json ./
 
-RUN npm i
-
+RUN npm ci
 COPY . ./
 
-ENTRYPOINT ["npm", "run", "start"]
+RUN npm run build \
+    && rm -rf ./src \
+    && rm -rf node ./node_modules
+
+FROM nginx:latest AS frontend
+WORKDIR /app
+COPY --from=builder /app/build /usr/share/nginx/html
+COPY ./nginx/conf.d/default.conf /etc/nginx/conf.d
+EXPOSE 80
+
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
